Tue Mar  7 16:21:32 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/Naming_Service/Makefile.am:
        * orbsvcs/Naming_Service/Naming_Server.cpp:
        * orbsvcs/Naming_Service/Naming_Service.mpc:
          The Naming Server executable now includes the header for the
          ImR client library.  This is required for tests in static 
          builds that use the Naming Server with the ImR.

Tue Mar 07 11:11:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2417_Regression/publisher_impl.cpp:
          Fixed implicit conversion warnings

Tue Mar  7 10:16:50 UTC 2006  Don Sharp <Donald.Sharp@prismtech.com>

        * tests/Bug_2377_Regression/*:
          New regression for bug 2377.

Tue Mar 07 09:36:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2417_Regression/Bug_2417_Regression.mpc:
          Added threads as base project

Tue Mar  7 07:51:52 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/LifeCycle_Service/Makefile.am:

          Regenerated.

        * orbsvcs/LifeCycle_Service/LifeCycle_Service.mpc:

          Changed to not inherit from 'core' so LifeCycle_Service
          executable is not installed.  It's not a stand-alone service
          like the others in ${TAO_ROOT}/orbsvcs, it is an example for use
          with ${TAO_ROOT}/examples/Quoter.  After x.5.1 we'll try to find
          a better place for this.  See bugzilla issue 2410.

Tue Mar  7 07:40:37 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * examples/AMI/FL_Callback/Makefile.am:
        * tao/Makefile.am:

          Regenerated for autoconf FL & QT Reactor / FL & QT Resource
          Factory support.

Mon Mar 06 20:08:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.h:
          Doxygen improvement

Mon Mar 06 19:19:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Incoming_Message_Queue.cpp:
          Doxygen improvements
