@@ -1,10 +1,16 @@
+Wed Mar  8 07:14:30 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * tao/Makefile.am:
+
+          Regenerated.
+
 Tue Mar  7 16:21:32 UTC 2006  Adam Mitz  <mitza@ociweb.com>
 
         * orbsvcs/Naming_Service/Makefile.am:
         * orbsvcs/Naming_Service/Naming_Server.cpp:
         * orbsvcs/Naming_Service/Naming_Service.mpc:
           The Naming Server executable now includes the header for the
-          ImR client library.  This is required for tests in static 
+          ImR client library.  This is required for tests in static
           builds that use the Naming Server with the ImR.
 
 Tue Mar 07 11:11:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
